--- a/backend-1/package.json
+++ b/backend-1/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "a basic app for deploy",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node api/index.js",
+    "dev" :"nodemon api/index.js"
   },
   "keywords": [
     "node",
@@ -15,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
