--- a/backend-1/package.json
+++ b/backend-1/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node api/index.js",
-    "dev" :"nodemon api/index.js"
+    "dev": "nodemon api/index.js"
   },
   "keywords": [
     "node",
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.1",
     "nodemon": "^3.0.1"
   }
 }
