--- a/backend-1/.env
+++ b/backend-1/.env
@@ -1,2 +1,2 @@
 PORT =4000
-MONGODB_URL =''
+MONGODB_URL ='mongodb+srv://login-page-auth:login-page-auth@login-page-auth.m1pdjlo.mongodb.net/login-verfyication?retryWrites=true&w=majority'
