--- a/backend-1/package.json
+++ b/backend-1/package.json
@@ -15,6 +15,7 @@
   "author": "hitesh via viaks",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
